fix: fix content cutoff inside card modal

--- a/css/body.css
+++ b/css/body.css
@@ -42,17 +42,20 @@
 
 .project-list__card--maximized
 {
-    display: flex;
-    flex: 1 1 auto;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
     z-index: 42000;
     position: fixed;
     overflow-y: auto;
     top: 0;
-    left: 0;
+    bottom: 0;
     background-color: ghostwhite;
     flex-direction: column;
+}
+.project-list__card-content--maximized
+{
+    border: solid black 1px;
+    width: 100%;
+    padding: 0 5vw;
 }
 .project-list__card-text-heading
 {
@@ -61,17 +64,6 @@
     text-align: left;
     color: black;
     text-shadow: none;
-}
-.project-list__card-content--maximized
-{
-    flex: 1 1 auto;
-    border: solid black 1px;
-    width: 100%;
-    padding: 0 5vw;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 .project-list__card-thumb--maximized
 {
